# Nomad

./: .gitignore  Nomad_Setup_Guide.docx  README.md  gradle.properties  settings.gradle  setup_llama.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/mobilellm/: requirements.txt  setup.py  setup_termux.sh
app/src/main/assets/mobilellm/mobilellm/: __init__.py  auto_model.py  cli.py  engine.py  loader.py  memory_manager.py  server.py  splitter.py
app/src/main/assets/mobilellm/mobilellm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/src/main/cpp/: CMakeLists.txt  llama_wrapper.cpp
app/src/main/kotlin/com/nomad/: MainActivity.kt
app/src/main/kotlin/com/nomad/data/: ChatHistoryManager.kt  DownloadWorker.kt  FileProcessor.kt  LocalFileHelper.kt  ModelManager.kt  Models.kt  WebSearchHelper.kt
app/src/main/kotlin/com/nomad/engine/: LlamaEngine.kt
app/src/main/kotlin/com/nomad/mobilellm/: AirLLMEngine.kt  MobileAirLLMClient.kt  MobileLLMServerManager.kt
app/src/main/kotlin/com/nomad/ui/: ChatScreen.kt
app/src/main/kotlin/com/nomad/ui/theme/: Theme.kt
app/src/main/kotlin/com/nomad/utils/: AssetHelper.kt
app/src/main/kotlin/com/nomad/viewmodel/: ChatViewModel.kt
app/src/main/kotlin/com/pocketllm/: MainActivity.kt
app/src/main/kotlin/com/pocketllm/data/: ChatHistoryManager.kt  FileProcessor.kt  LocalFileHelper.kt  ModelManager.kt  Models.kt
app/src/main/kotlin/com/pocketllm/engine/: LlamaEngine.kt
app/src/main/kotlin/com/pocketllm/ui/: ChatScreen.kt  ModelsScreen.kt
app/src/main/kotlin/com/pocketllm/ui/theme/: Theme.kt
app/src/main/kotlin/com/pocketllm/viewmodel/: ChatViewModel.kt
app/src/main/res/values/: themes.xml
app/src/test/kotlin/com/pocketllm/engine/: PerformanceTest.kt
gradle/wrapper/: gradle-wrapper.properties
